--- a/.github/workflows/coveo-example-library.yml
+++ b/.github/workflows/coveo-example-library.yml
@@ -6,12 +6,15 @@ on:
       - main
     paths:
       - 'coveo-example-library/**'
+      - '!**.lock'
+      - '!**.md'
 
   pull_request:
     types: [opened, synchronize, reopened]
     paths:
       - 'coveo-example-library/**'
       - '.github/workflows/coveo-example-library.yml'
+      - '!**.md'
 
   workflow_dispatch:
     inputs:
