--- a/coveo-functools/pyproject.toml
+++ b/coveo-functools/pyproject.toml
@@ -20,7 +20,7 @@ bandit = "*"
 black = "*"
 coveo-testing = { path = "../coveo-testing/", develop = true }
 flake8 = "*"
-mypy = "0.950"
+mypy = "1.9.0"
 pytest = "*"
 
 
@@ -30,7 +30,7 @@ offline-build = true
 black = true
 
 [tool.stew.ci.custom-runners]
-flake8 = { args = ["--ignore=E501,W503"]}
+flake8 = { args = ["--ignore=E501,W503,E704"]}
 
 
 [tool.black]
