--- a/.github/workflows/coveo-arnparse.yml
+++ b/.github/workflows/coveo-arnparse.yml
@@ -31,8 +31,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.8, "3.10"]
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        python-version: ["3.8", "3.10"]
+        os: [ubuntu-latest, windows-latest, macos-11]
 
     steps:
       - name: Run stew ci
