--- a/coveo-functools/pyproject.toml
+++ b/coveo-functools/pyproject.toml
@@ -28,6 +28,7 @@ pytest = "*"
 pytest = true
 offline-build = true
 black = true
+mypy = { set-config = false }
 
 [tool.stew.ci.custom-runners]
 flake8 = { args = ["--ignore=E501,W503,E704"]}
@@ -40,3 +41,27 @@ line-length = 100
 [build-system]
 requires = ["poetry_core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+
+[tool.mypy]
+follow_imports = "silent"
+ignore_missing_imports = true
+incremental = false
+
+## type checking options
+# some are == to the default value. I included them for visibility since we might want to enable/disable them in the future.
+strict_optional = false
+warn_return_any = true
+warn_redundant_casts = true
+warn_unused_ignores = true
+
+disallow_untyped_defs = true
+disallow_incomplete_defs = true
+check_untyped_defs = true
+
+## reporting options
+show_column_numbers = true
+
+# We have tests with `list[str]` and `str | int` which were introduced in 3.9 and 3.10.
+# These tests are skipped when running on earlier versions.
+python_version = "3.10"
