--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,10 +3,10 @@ name = "coveo-python-oss"
 version = "0.0.1"
 description = "coveo-python-oss virtual environment bootstrap for developers"
 authors = ["Jonathan Piché <jpiche@coveo.com>"]
-
+package-mode = false
 
 [tool.poetry.dependencies]
-python = ">=3.8,<3.10"  # the docker package in coveo-testing-extras can't run on 3.10
+python = ">=3.8"  # the docker package in coveo-testing-extras can't run on 3.10
 coveo-arnparse = { path = 'coveo-arnparse/', develop = true }
 coveo-example-library = { path = 'coveo-example-library/', develop = true }
 coveo-functools = { path = 'coveo-functools/', develop = true }
