--- a/.github/workflows/coveo-ref.yml
+++ b/.github/workflows/coveo-ref.yml
@@ -33,7 +33,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.8", "3.10"]
-        os: [ubuntu-latest, windows-latest, macos-11]
+        os: [ubuntu-latest, windows-latest, macos-latest]
 
     steps:
       - name: Run stew ci
