--- a/coveo-pypi-cli/pyproject.toml
+++ b/coveo-pypi-cli/pyproject.toml
@@ -15,6 +15,7 @@ coveo-settings = { version = "^2.0.0" }
 coveo-styles = { version = "^2.0.0" }
 coveo-systools = { version = "^2.0.0" }
 requests = "*"
+setuptools = "*"
 typing-extensions = "*"
 
 
