--- a/coveo-example-library/pyproject.toml
+++ b/coveo-example-library/pyproject.toml
@@ -9,10 +9,10 @@ authors = ["Jonathan Piché <tools@coveo.com>"]
 
 
 [tool.poetry.dependencies]
-python = ">=3.8"
+python = ">=3.9,<4"
 
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 bandit = "*"
 black = "*"
 coveo-testing = { path = "../coveo-testing", develop = true }
@@ -27,6 +27,7 @@ black = true
 
 [tool.black]
 line-length = 100
+target-version = ["py39"]
 
 
 [build-system]
