--- a/coveo-ref/pyproject.toml
+++ b/coveo-ref/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "coveo-ref"
-version = "1.0.0"
+version = "2.0.0"
 description = "Allows using unittest.patch() without hardcoding strings."
 license = "Apache-2.0"
 readme = "README.md"
@@ -8,10 +8,10 @@ repository = "https://github.com/coveooss/coveo-python-oss/tree/main/coveo-ref"
 authors = ["Jonathan Piché <tools@coveo.com>"]
 
 [tool.poetry.dependencies]
-python = ">=3.8"
+python = ">=3.9,<4"
 
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 bandit = "*"
 black = "*"
 coveo-testing = "*"
@@ -28,6 +28,7 @@ black = true
 
 [tool.black]
 line-length = 100
+target-version = ["py39"]
 
 
 [build-system]
