--- a/coveo-systools/pyproject.toml
+++ b/coveo-systools/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "coveo-systools"
-version = "2.0.0"
+version = "3.0.0"
 description = "Filesystem, language and OS related tools."
 license = "Apache-2.0"
 readme = "README.md"
@@ -8,13 +8,13 @@ repository = "https://github.com/coveooss/coveo-python-oss/tree/main/coveo-systo
 authors = ["Jonathan Piché <tools@coveo.com>"]
 
 [tool.poetry.dependencies]
-python = ">=3.8"
+python = ">=3.9,<4"
 
-coveo-functools = { version = "^2.0.0" }
+coveo-functools = "*"
 typing_extensions = "*"
 
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 bandit = "*"
 black = "*"
 coveo-functools = { path = "../coveo-functools/", develop = true }
@@ -34,5 +34,5 @@ line-length = 100
 
 
 [build-system]
-requires = ["poetry_core>=1.0.0"]
+requires = ["poetry_core>=2.0.0"]
 build-backend = "poetry.core.masonry.api"
