--- a/coveo-testing-extras/pyproject.toml
+++ b/coveo-testing-extras/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "coveo-testing-extras"
-version = "2.1.0"
+version = "3.0.0"
 description = "Dependency-hungry testing helpers"
 license = "Apache-2.0"
 readme = "README.md"
@@ -8,7 +8,7 @@ repository = "https://github.com/coveooss/coveo-python-oss/tree/main/coveo-testi
 authors = ["Jonathan Piché <tools@coveo.com>"]
 
 [tool.poetry.dependencies]
-python = ">=3.8"
+python = ">=3.9,<4"
 
 coveo-functools = "*"
 coveo-settings = "*"
@@ -17,7 +17,7 @@ coveo-testing = "*"
 docker = "*"
 
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 bandit = "*"
 black = "*"
 coveo-functools = { path = "../coveo-functools/", develop = true }
@@ -41,5 +41,5 @@ line-length = 100
 
 
 [build-system]
-requires = ["poetry_core>=1.0.0"]
+requires = ["poetry_core>=2.0.0"]
 build-backend = "poetry.core.masonry.api"
