--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,9 @@ description = "coveo-python-oss virtual environment bootstrap for developers"
 authors = ["Jonathan Piché <jpiche@coveo.com>"]
 package-mode = false
 
+
 [tool.poetry.dependencies]
-python = ">=3.8"  # the docker package in coveo-testing-extras can't run on 3.10
+python = ">=3.9,<4"
 coveo-arnparse = { path = 'coveo-arnparse/', develop = true }
 coveo-example-library = { path = 'coveo-example-library/', develop = true }
 coveo-functools = { path = 'coveo-functools/', develop = true }
@@ -42,5 +43,5 @@ line-length = 100
 
 
 [build-system]
-requires = ["poetry_core>=1.0.0", "setuptools"]
+requires = ["poetry_core>=2.0.0"]
 build-backend = "poetry.core.masonry.api"
