--- a/.github/workflows/coveo-arnparse.yml
+++ b/.github/workflows/coveo-arnparse.yml
@@ -66,6 +66,12 @@ jobs:
     name: Publish to pypi.org
     runs-on: ubuntu-22.04
     needs: stew
+    environment:
+      name: pypi
+      url: https://pypi.org/project/coveo-stew/
+    permissions:
+      contents: write
+      id-token: write
 
     steps:
       - name: Harden the runner (Audit all outbound calls)
@@ -81,10 +87,24 @@ jobs:
         with:
           python-version: 3.9
 
-      - name: Publish to pypi
-        uses: ./.github/workflows/actions/publish-to-pypi
+      - name: Build
+        uses: ./.github/workflows/actions/build
         with:
           project-name: ${{ github.workflow }}
-          pypi-token: ${{ secrets.PYPI_TOKEN_COVEO_ARNPARSE }}
+          pre-release: ${{ github.ref != 'refs/heads/main' }}
+          dry-run: ${{ github.ref != 'refs/heads/main' && github.event.inputs.publish != 'true' }}
+
+      - name: Publish to pypi
+        if: ${{ github.ref == 'refs/heads/main' }}
+        uses: pypa/gh-action-pypi-publish@ed0c53931b1dc9bd32cbe73a98c7f6766f8a527e # v1.13.0
+
+      - name: Publish to pypi (dry-run)
+        if: ${{ github.ref != 'refs/heads/main' }}
+        run: echo 'Would publish to pypi'
+
+      - name: Create tag
+        uses: ./.github/workflows/actions/post-publish
+        with:
+          project-name: ${{ github.workflow }}
           pre-release: ${{ github.ref != 'refs/heads/main' }}
           dry-run: ${{ github.ref != 'refs/heads/main' && github.event.inputs.publish != 'true' }}
