trusted publisher for all workflows

--- a/.github/workflows/coveo-arnparse.yml
+++ b/.github/workflows/coveo-arnparse.yml
@@ -69,7 +69,7 @@ jobs:
     needs: stew
     environment:
       name: pypi
-      url: https://pypi.org/project/coveo-stew/
+      url: https://pypi.org/project/coveo-arnparse/
     permissions:
       contents: write
       id-token: write
