--- a/.github/workflows/coveo-ref.yml
+++ b/.github/workflows/coveo-ref.yml
@@ -49,9 +49,16 @@ jobs:
           poetry-version: "<3"
 
   publish:
+    if: github.ref == 'refs/heads/main'
     name: Publish to pypi.org
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     needs: stew-ci
+    environment:
+      name: pypi
+      url: https://pypi.org/project/coveo-ref/
+    permissions:
+      contents: write
+      id-token: write
 
     steps:
       - name: Harden the runner (Audit all outbound calls)
@@ -60,17 +67,27 @@ jobs:
           egress-policy: audit
 
       - name: Checkout repository
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        uses: actions/checkout@ee0669bd1cc54295c223e0bb666b733df41de1c5 # v2.7.0
 
-      - name: Setup python 3.10
-        uses: actions/setup-python@65d7f2d534ac1bc67fcd62888c5f4f3d2cb2b236 # v4.7.1
+      - name: Setup python 3.9
+        uses: actions/setup-python@e9aba2c848f5ebd159c070c61ea2c4e2b122355e # v2.3.4
         with:
-          python-version: "3.10"
+          python-version: 3.9
 
-      - name: Publish to pypi
-        uses: ./.github/workflows/actions/publish-to-pypi
+      - name: Build
+        uses: ./.github/workflows/actions/build
         with:
           project-name: ${{ github.workflow }}
-          pypi-token: ${{ secrets.PYPI_TOKEN_COVEO_REF }}
           pre-release: ${{ github.ref != 'refs/heads/main' }}
           dry-run: ${{ github.ref != 'refs/heads/main' && github.event.inputs.publish != 'true' }}
+
+      - name: Publish to pypi
+        uses: pypa/gh-action-pypi-publish@ed0c53931b1dc9bd32cbe73a98c7f6766f8a527e # v1.13.0
+
+      - name: Create tag
+        uses: ./.github/workflows/actions/post-publish
+        with:
+          project-name: ${{ github.workflow }}
+          pre-release: ${{ github.ref != 'refs/heads/main' }}
+          dry-run: ${{ github.ref != 'refs/heads/main' && github.event.inputs.publish != 'true' }}
+
