Move to ubuntu 24.04 J:IDXINFRA-2330

--- a/coveo-testing-extras/pyproject.toml
+++ b/coveo-testing-extras/pyproject.toml
@@ -15,6 +15,7 @@ coveo-settings = "*"
 coveo-systools = "*"
 coveo-testing = "*"
 docker = "*"
+packaging = "*"
 
 
 [tool.poetry.group.dev.dependencies]
