--- a/.github/workflows/coveo-testing.yml
+++ b/.github/workflows/coveo-testing.yml
@@ -78,6 +78,7 @@ jobs:
 
       - name: Build
         uses: ./.github/workflows/actions/build
+        id: build
         with:
           project-name: ${{ github.workflow }}
           pre-release: ${{ github.ref != 'refs/heads/main' }}
@@ -92,6 +93,6 @@ jobs:
         uses: ./.github/workflows/actions/post-publish
         with:
           project-name: ${{ github.workflow }}
-          pre-release: ${{ github.ref != 'refs/heads/main' }}
+          next-version: ${{ steps.build.outputs.next-version }}
           dry-run: ${{ github.ref != 'refs/heads/main' && github.event.inputs.publish != 'true' }}
 
